<resources>
  <string name="app_name">Chat App</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="log_in">Log in</string>
  <string name="register">Sign up</string>
  <string name="please_enter_the_required_fields">Please enter the required fields.</string>
  <string name="firstname">Firstname</string>
  <string name="lastname">Lastname</string>
  <string name="contact_number">Contact number</string>
  <string name="submit">Submit</string>
  <string name="title_activity_home">Chat App</string>
  <string name="contacts">Contacts</string>
  <string name="title_activity_contacts">Contacts</string>
  <string name="title_activity_forgot_password">Forgot password</string>
  <string name="enter_your_email_to_send_a_password_reset">Enter your email to send a password reset.</string>
  <string name="reset_password">Reset password</string>
  <string name="title_activity_contact_details">Contact details</string>
  <string name="messages">MESSAGES</string>
  <string name="my_profile">My profile</string>
  <string name="title_activity_my_profile">My profile</string>
  <string name="title_activity_new_message">Write message</string>
  <string name="search_by_name_or_email">Search by name or email</string>
  <string name="message">Message</string>
  <string name="title_activity_conversation">Conversation</string>
  <string name="send">send</string>
  <string name="write_message">Write message</string>
  <string name="sample_conversation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac turpis lorem. Nulla eleifend tortor quis eros vehicula, eu sagittis lectus tempor. Sed elementum fermentum mi, vel porttitor sapien consequat sed. Fusce aliquam varius luctus. Morbi nec orci sed odio consequat tincidunt.</string>
  <string name="chat_room">Chat room</string>
  <string name="forgot_password">Forgot password?</string>
  <string name="join_room">Join Room</string>
  <string name="create_room">Create Room</string>
  <string name="log_out">Log out</string>
  <string name="facebook_app_id">1758568881079161</string>
</resources>
