<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity"
    >

  <ImageView
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:scaleType="centerCrop"
      android:src="@drawable/img_logo"
      />

  <EditText
      android:id="@+id/edt_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:textColor="@android:color/black"
      />

  <EditText
      android:id="@+id/edt_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textColor="@android:color/black"
      />

  <TextView
      android:id="@+id/tv_forgot_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:text="@string/forgot_password"
      android:textColor="@android:color/holo_blue_dark"
      />

  <Button
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:background="@android:color/holo_blue_light"
      android:text="@string/log_in"
      android:textColor="@android:color/white"
      />

  <Button
      android:id="@+id/btn_register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@android:color/holo_red_light"
      android:text="@string/register"
      android:textColor="@android:color/white"
      />

</LinearLayout>