<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity"
    >

  <TextView
      android:id="@+id/tv_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/please_enter_the_required_fields"
      />

  <EditText
      android:id="@+id/edt_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tv_message"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      />

  <EditText
      android:id="@+id/edt_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/edt_email"
      android:hint="@string/password"
      android:inputType="textPassword"
      />

  <Button
      android:id="@+id/btn_submit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/edt_password"
      android:layout_marginTop="30dp"
      android:background="@android:color/holo_blue_light"
      android:text="@string/submit"
      android:textColor="@android:color/white"
      />
</RelativeLayout>
