<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.techup.android.friedlychatapp.activities.HomeActivity"
    >

  <Button
      android:id="@+id/btn_join_room"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/join_room"
      />
  <Button
      android:id="@+id/btn_create_room"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btn_join_room"
      android:text="@string/create_room"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:text="@string/log_out"
      android:textSize="24sp"
      />

</RelativeLayout>
